# my_open_ai

./: pyproject.toml
my_open_ai/: bot.py  chat_service.py  config.py  main.py  openai_client.py  utils.py
my_open_ai/functions/: get_weather.py
my_open_ai/tools/: tool_registry.py  weather_tool.py
